log

Thu 17 Aug 2023 08:12:23 PM UTC: 
 tests:  0|7
total_score: 0/70
6269d63
Thu 17 Aug 2023 08:16:30 PM UTC: 
 exercises.c | 62 +++++++++++++++++++++++++++++++++++++++++++++++++++++++------
 1 file changed, 56 insertions(+), 6 deletions(-)
 tests:  0|3
total_score: 40/70
a5d08b4
Thu 17 Aug 2023 08:41:06 PM UTC: 
 exercises.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:108:1: error: control reaches end of non-void function [-Werror=return-type]
  108 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
125bd66
Thu 17 Aug 2023 08:41:25 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:108:1: error: control reaches end of non-void function [-Werror=return-type]
  108 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
2b3b151
Thu 17 Aug 2023 08:52:21 PM UTC: 
 exercises.c | 26 +++++++++-----------------
 1 file changed, 9 insertions(+), 17 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:94:1: error: control reaches end of non-void function [-Werror=return-type]
   94 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
5743b39
Thu 17 Aug 2023 08:52:31 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|2
total_score: 50/70
e45c620
Thu 17 Aug 2023 09:04:10 PM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘crearListaEnlazada’:
exercises.c:146:1: error: control reaches end of non-void function [-Werror=return-type]
  146 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
ac25328
Thu 17 Aug 2023 09:05:04 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘crearListaEnlazada’:
exercises.c:144:9: error: ‘Nodo’ {aka ‘struct nodo’} has no member named ‘nodo’
  144 |     hola->nodo->siguiente=NULL;
      |         ^~
exercises.c:146:1: error: control reaches end of non-void function [-Werror=return-type]
  146 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
56d6839
Thu 17 Aug 2023 09:05:24 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘crearListaEnlazada’:
exercises.c:146:1: error: control reaches end of non-void function [-Werror=return-type]
  146 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
54b8ddb
Thu 17 Aug 2023 09:05:57 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:1:
exercises.c: In function ‘crearListaEnlazada’:
exercises.c:146:10: error: ‘hola’ undeclared (first use in this function)
  146 |   return hola;
      |          ^~~~
exercises.c:146:10: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:147:1: error: control reaches end of non-void function [-Werror=return-type]
  147 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
fcafb0b
